--- a/values/koo-blog-api/values.yaml
+++ b/values/koo-blog-api/values.yaml
@@ -11,18 +11,18 @@ autoscaling:
 deployment:
   replicaCount: 1
   image:
-    repository: "koo-blog-api"
+    repository: "122976268003.dkr.ecr.ap-northeast-2.amazonaws.com/koo-blog-api"
     pullPolicy: "IfNotPresent"
-    tag: "latest"
+    tag: "94301ff"
   containerPort: 8080
   livenessProbe:
     httpGet:
       path: /hello
-      port: http
+      port: 8080
   readinessProbe:
     httpGet:
       path: /hello
-      port: http
+      port: 8080
   resources:
     requests:
       cpu: 100m
