--- a/values/koo-blog-api/values.yaml
+++ b/values/koo-blog-api/values.yaml
@@ -39,13 +39,14 @@ ingress:
   annotations:
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
+    alb.ingress.kubernetes.io/ssl-redirect: '443'
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:122976268003:certificate/6dbf0a97-5175-4cb5-a52f-8df33809a17e
     alb.ingress.kubernetes.io/healthcheck-path: /hello
     alb.ingress.kubernetes.io/healthcheck-port: '8080'
     alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
   hosts:
-    - host: koo-blog.com
+    - host: "*"
       paths:
         - path: /
           pathType: Prefix
